--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "pug": "^0.1.0",
-    "mongoose": "^4.6.1"
+    "mongoose": "^4.6.1",
+    "nodemon": "^1.10.2",
+    "pug": "^0.1.0"
   },
   "devDependencies": {},
   "scripts": {
-    "start": "node app.js",
+    "start": "./node_modules/nodemon/bin/nodemon.js app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
