--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "mongoose": "^4.6.1",
+    "node-cron": "^1.1.2",
     "nodemon": "^1.10.2",
     "pug": "^0.1.0"
   },
